--- a/news/templates/news_form.html
+++ b/news/templates/news_form.html
@@ -39,13 +39,17 @@
             <div>
                 <h3>
                     <small class="pull-right news_date">19 мая 2016г. 15:35</small><br>
-                    <div class="news_title">Это длинный тестовый заголовок, чтобы понять, на что мы вообще способны. А способны мы на многое!
+                    <div class="news_title">Открытие системы!
                     </div>
                 </h3>
             </div>
-            <span class="news_body_path">Будет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек. Будет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек. Будет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек.Будет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек.</span>
-                        <span class="news_hidden_path" style="display:none;">не превратив новостную ленту в свой милый бложек. Будет сложно законБудет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек. Будет сложно законБудет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек. Будет сложно законБудет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек. Будет сложно законБудет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек. Будет сложно законБудет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек. Будет сложно законБудет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек. Будет сложно законБудет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек. Будет сложно законБудет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек. Будет сложно законБудет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек. Будет сложно законБудет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек. Будет сложно закон
-                        </span>
+            <span class="news_body_path">
+                Товарищи, поздравляем с долгожданным открытием нашего ресурса!<br><br>Теперь каждый сможет получить неограниченную помощь в диагностике, воспользовавшись нашей Системой для помощи в диагностике, а также самостоятельно записаться на развозку с 9 утра до 7 вечера!...
+            </span>
+            <span class="news_hidden_path" style="display:none;">
+                Товарищи, поздравляем с долгожданным открытием нашего ресурса!<br><br>Теперь каждый сможет получить неограниченную помощь в диагностике, воспользовавшись нашей Системой для помощи в диагностике, а также самостоятельно записаться на развозку с 9 утра до 7 вечера!<br><br>
+                Но это еще не все! Скоро набор инструментов пополнится Системой мониторинга аварий, а также системой тестирования, позволяющей выявить уровень подготовки наших специалистов!
+            </span>
 
             <div class="btn-group pull-right news_item_navigation" id="news_navigation_1">
                 {% if user_is_staff %}
