--- a/drive/templates/my_address_list.html
+++ b/drive/templates/my_address_list.html
@@ -10,7 +10,7 @@
 
 <div class="col-md-2"></div>
 <div class="col-md-8">
-<table class="table table-striped table-hover">
+<table class="table table-striped">
     <thead>
     <tr>
         <th>Адрес</th>
