--- a/feedback/templates/feedback_history.html
+++ b/feedback/templates/feedback_history.html
@@ -1,11 +1,17 @@
 {% block feedback_history %}
 <div class="feedback_chat_container_user">
-    <table id="feedback_history" class="table table-hover news_list" style="display:none">
+    <table id="feedback_history" class="table table-hover chat_list" style="display:none">
         {% for note in feedback_notes %}
             <tr>
                 <td>
                     <div style="font-weight:bold!important">
-                        <div class="pull-left">from {{ note.from_user }}</div>
+                        <div class="pull-left">
+                            {% if note.from_user.last_name == '' or note.from_user.first_name == '' %}
+                                {{ note.from_user }}
+                            {% else %}
+                                {{ note.from_user.last_name }} {{ note.from_user.first_name }}
+                            {% endif %}
+                        </div>
                         <div class="pull-right">{{ note.feedback_date|date:"d.m.Y"}}</div>
                         <br>
                         <div class="pull-right">{{ note.feedback_date|date:"h:i:s"}}</div>
