--- a/mainpage/templates/mainpage.html
+++ b/mainpage/templates/mainpage.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" type="text/css" href='{% static "static/templates/bootstrap/css/bootstrap.min.css" %}'>
     <link rel="stylesheet" type="text/css" href='{% static "static/templates/fileManager/grid.css" %}'>
 
-    <title>Органайзер саппортиста</title>
+    <title>Система помощи Call-центра</title>
 
 </head>
 <body>
 
 <nav role="navigation" class="navbar navbar-default">
     <div class="navbar-header">
-        <a href="#" class="navbar-brand">Органайзер саппортиста</a>
+        <a href="#" class="navbar-brand">Инструментарий InterZet</a>
     </div>
 
 
@@ -24,13 +24,13 @@
 
         <ul class="nav navbar-nav">
             <li><a href="/">Главная</a></li>
+<!------
             {% if username %}
             <li>
                 <a href="/diagnostic/">Интерактивная диагностика</a>
             </li>
             {% endif %}
-
-
+---->
             {% if username %}
             <li>
                 <a href="/drive/">Автоматизированная развозка</a>
@@ -46,7 +46,6 @@
             ----->
         </ul>
         <ul class="nav navbar-nav navbar-right">
-
             {% if The_Creator_is_here %}
             <li>
 
@@ -55,7 +54,11 @@
                     {% endif %}</a>
             </li>
             {% endif %}
-
+            {% if username %}
+            <li style="background-color:orange;">
+                <a href="/profile/">Профиль</a>
+            </li>
+            {% endif %}
 
             <li>
                 {% if username %}
